
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


typedef int u_long ;
struct TYPE_7__ {int event_mask; int bit_gravity; void* border_pixel; void* background_pixel; } ;
typedef TYPE_1__ XSetWindowAttributes ;
struct TYPE_8__ {void* background; int foreground; } ;
typedef TYPE_2__ XGCValues ;
struct TYPE_9__ {int win; int gc; int draw; int bg; int color; int font; int * display; } ;
typedef TYPE_3__ XDataStr ;
typedef int Window ;
typedef int Screen ;
typedef int Display ;


 int BlackPixel (int *,int) ;
 int ButtonPressMask ;
 int ButtonReleaseMask ;
 int CWBackPixel ;
 int CWBitGravity ;
 int CWBorderPixel ;
 int CWEventMask ;
 int DefaultColormap (int *,int) ;
 int DefaultDepth (int *,int) ;
 int DefaultScreen (int *) ;
 int DefaultVisual (int *,int) ;
 int DisplayWidth (int *,int) ;
 int ExposureMask ;
 int GCBackground ;
 int GCForeground ;
 int InputOutput ;
 int KeyPressMask ;
 int NorthWestGravity ;
 int RootWindow (int *,int) ;
 int * ScreenOfDisplay (int *,int) ;
 void* WhitePixel (int *,int) ;
 int XCreateGC (int *,int ,int,TYPE_2__*) ;
 int XCreateWindow (int *,int ,int ,int ,int,int,int ,int ,int ,int ,int,TYPE_1__*) ;
 int XDefaultVisual (int *,int) ;
 int XFT_FAMILY ;
 int XFT_SIZE ;
 int XftColorAllocName (int *,int ,int ,char*,int *) ;
 int XftDrawCreate (int *,int ,int ,int ) ;
 int XftFontOpen (int *,int,int ,int ,char*,int ,int ,int,int *) ;
 int XftTypeInteger ;
 int XftTypeString ;
 int fprintf (int ,char*) ;
 int stderr ;

int
createWin(XDataStr *data)
{
    u_long attributeMask;
    XSetWindowAttributes attribute;
    Window w;
    Display *display = data->display;
    int screen = DefaultScreen(display);
    XGCValues gc_val;
    Screen *s;

    attribute.background_pixel = WhitePixel(display, screen);
    attribute.border_pixel = WhitePixel(display, screen);
    attribute.bit_gravity = NorthWestGravity;
    attribute.event_mask = ButtonPressMask|ButtonReleaseMask|KeyPressMask|
        ExposureMask;

    attributeMask =
        CWBorderPixel |
        CWBackPixel |
        CWEventMask |
        CWBitGravity;
    s = ScreenOfDisplay(data->display, screen);

    w = XCreateWindow(display, RootWindow(display, screen), 0, 0,
            DisplayWidth(display, screen)/2, 150,
            0, DefaultDepth(display, screen), InputOutput,
            DefaultVisual(display, screen), attributeMask, &attribute);

    data->font = XftFontOpen(display, screen,
            XFT_FAMILY, XftTypeString, "mono",
            XFT_SIZE, XftTypeInteger, 16,
            ((void*)0));
    if (!XftColorAllocName(display, XDefaultVisual(display, screen),
                DefaultColormap(display, screen), "red4", &data->color)) {
        fprintf(stderr, "cannot get color");
        return -1;
    }
    if (!XftColorAllocName(display, XDefaultVisual(display, screen),
                DefaultColormap(display, screen), "linen", &data->bg)) {
        fprintf(stderr, "cannot get bg color");
        return -1;
    }
    data->draw = XftDrawCreate(display, w, DefaultVisual(display, screen),
            DefaultColormap(display, screen));
    gc_val.foreground = BlackPixel(display, screen);
    gc_val.background = WhitePixel(display, screen);
    data->gc = XCreateGC (display, w, GCForeground|GCBackground,
            &gc_val);

    data->win = w;
    return 0;
}
